# IoT-Multi-Factor-Smart-Door-System

./: CMakeLists.txt  Facial_database.py  Libraries.doc  README.md  Thread_make.cpp  Thread_make.h  cam-test.cpp  new-module.cpp  team22  unlock_module.cpp
docs/: Face-Recognition-documentation .doc  face recog.doc
src/app/: command_input.cpp  command_input.hpp  main.cpp
src/core/: alarm_manager.cpp  alarm_manager.hpp  blocking_queue.hpp  controller.cpp  controller.hpp  events.hpp  logger.cpp  logger.hpp
src/drivers/: access_verifier.hpp  access_verifier_mock.cpp  door_sensor.hpp  door_sensor_mock.cpp
